--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -43,11 +43,8 @@
                             <div class="txt">
                                 <a th:href="@{/find/pass}">비밀번호 찾기</a>
                             </div>
-                            <div class="txt">
-                                <a target="_blank" href="../main/main.html">주문조회</a>
-                            </div>
                             <div class="join_txt">
-                                <a target="_blank" th:href="@{sign-up}">회원가입</a>
+                                <a th:href="@{/signUp}">회원가입</a>
                             </div>
                         </div>
                         <!--                <ul class="sns_login">-->
