--- a/src/main/resources/templates/admin/item/itemForm.html
+++ b/src/main/resources/templates/admin/item/itemForm.html
@@ -113,22 +113,20 @@
                                             </th>
                                             <td>
                                                 <input class="fake_input" type="text">
-                                                <label class="white_btn_sm" th:for="${'img' + num}">파일 찾기</label>
-                                                <input type="file" class="real_input" name="itemImgFile"
-                                                    th:id="${'img' + num}">
+                                                <label class="white_btn_w90_h40 find_file" th:for="${'img' + num}">파일 찾기</label>
+                                                <input type="file" class="real_input" name="itemImgFile" th:id="${'img' + num}">
                                             </td>
                                         </tr>
                                     </div>
                                     <div th:if="${not #lists.isEmpty(itemFormDto.itemImgDtoList)}">
                                         <tr th:each="itemImgDto, status: ${itemFormDto.itemImgDtoList}">
                                             <th scope="row">
-                                                <label th:for="${'img' + status.index+1}"
-                                                    th:text="'상품 이미지 ' + ${status.index+1}"></label>
+                                                <label th:for="${'img' + status.index+1}" th:text="'상품 이미지 ' + ${status.index+1}"></label>
                                             </th>
                                             <td>
                                                 <input class="fake_input" type="text"
                                                     th:value="${not #strings.isEmpty(itemImgDto.oriImgName)} ? ${itemImgDto.oriImgName} : '상품 이미지 ' + ${status.index+1}">
-                                                <label class="white_btn_w90_h40" th:for="${'img' + status.index+1}">파일
+                                                <label class="white_btn_w90_h40 find_file" th:for="${'img' + status.index+1}">파일
                                                     찾기</label>
                                                 <input type="file" class="real_input" name="itemImgFile"
                                                     th:id="${'img' + status.index+1}">
